# game-framework

./: .gitignore  .gitmodules  CMakeLists.txt  GameFramework.sln  README.md  install_deps.sh  linux_build.sh
.github/workflows/: cmake.yml
Core/Graphics/: README.md
Core/Graphics/include/: Application.h  CoordTransform3D.h  Input.h  Logger.h  Maths.hpp  OrthographicCamera.h  PerspectiveCamera.h  RenderCommand.hpp  RenderQueue.h  Renderer.h  Resource.hpp  Shader.h  StringUtils.hpp  Texture.h  Texture2D.h  Timer.h  Window.h
Core/Graphics/src/Camera/: Camera.cpp  PerspectiveCamera.cpp
Core/Graphics/src/Core/: Application.cpp  ResourceSet.cpp  Window.cpp
Core/Graphics/src/Graphics/: Mesh.cpp
Core/Graphics/src/Input/: Input.cpp
Core/Graphics/src/Maths/: Noise.cpp
Core/Graphics/src/Objects/: CoordTransform3D.cpp  Model3D.cpp
Core/Graphics/src/Utils/: Logger.cpp  TextureLoader.cpp  Timer.cpp
Core/Physics/include/: CoordTransform3D.h  InertiaTensor.h  Mass.h  RigidBody.h  RigidBodyGroup.h  RigidBodyGroupMember.h  Spring.hpp  State.h
Core/Physics/src/: CoordTransform3D.cpp  InertiaTensor.cpp  Mass.cpp  RigidBody.cpp  RigidBodyGroup.cpp  RigidBodyStateSnapshot.cpp  State.cpp
GameFramework/: GameFramework.vcxproj  GameFramework.vcxproj.filters
GameFramework/src/Camera/: Camera.cpp  Camera.h  CameraSetup.cpp  CameraSetup.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
GameFramework/src/Core/: Application.cpp  Application.h  Resource.hpp  ResourceSet.cpp  ResourceSet.h  Window.cpp  Window.h
GameFramework/src/Graphics/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  SkyBox.cpp  SkyBox.h
GameFramework/src/Graphics/Core/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexFomat.cpp  VertexFormat.h
GameFramework/src/Graphics/Renderer/: RenderCommand.hpp  RenderQueue.cpp  RenderQueue.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h
GameFramework/src/Graphics/Texture/: Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  TextureCube.cpp  TextureCube.h
GameFramework/src/Imgui/: imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h
GameFramework/src/Input/: Input.cpp  Input.h
GameFramework/src/Maths/: Maths.hpp  Noise.cpp  Noise.h  Rectangle.cpp  Rectangle.h
GameFramework/src/Objects/: CoordinateSpace3D.hpp  Model3D.cpp  Model3D.h  Renderable2D.cpp  Renderable2D.h
GameFramework/src/Physics/: InertiaTensor.cpp  InertiaTensor.h  Mass.cpp  Mass.h  RigidBody.cpp  RigidBody.h  Spring.hpp  State.hpp
GameFramework/src/Utils/: ConsoleLogger.cpp  ConsoleLogger.h  FileManager.cpp  FileManager.h  OBJLoader.cpp  OBJLoader.h  StringUtils.hpp  TextureLoader.cpp  TextureLoader.h  ThreadPool.hpp  Timer.cpp  Timer.h
Testbed/: imgui.ini
Testbed/res/shaders/: flat.frag  flat.vert  overlay.vert
Testbed/src/: Testbed.cpp  main.cpp
Testbed/src/Visual/: FPVCamera.cpp
examples/Testbed/: Makefile  imgui.ini
examples/Testbed/src/: SteelComposite.cpp  SteelCube.cpp  Testbed.h
examples/Testbed/src/Visual/: PhysicsOverlay.h  SteelCubeModel.h
examples/testbed/: CMakeLists.txt
examples/testbed/include/: FPVCamera.h  SteelComposite.h  SteelCube.h  SteelCubeModel.h  Testbed.h
examples/testbed/res/shaders/: overlay.frag
examples/testbed/src/: PhysicsOverlay.cpp  SteelComposite.cpp  SteelCube.cpp  Testbed.cpp
examples/testbed/src/visual/: FPVCamera.h  PhysicsOverlay.cpp  PhysicsOverlay.h  SteelCubeModel.cpp
game-framework/graphics/: CMakeLists.txt  README.md
game-framework/graphics/include/: Application.h  Input.h  Model3D.h  OBJLoader.h  PerspectiveCamera.h  Resource.hpp  ResourceSet.h  SkyBox.h  StringUtils.hpp  TextureLoader.h  ThreadPool.hpp  VertexArray.h  VertexBuffer.h  VertexFormat.h  Window.h  factorial.h
game-framework/graphics/src/camera/: OrthographicCamera.cpp
game-framework/graphics/src/core/: Application.cpp  ResourceSet.cpp
game-framework/graphics/src/graphics/: SkyBox.cpp
game-framework/graphics/src/graphics/primitives/: IndexBuffer.cpp  VertexArray.cpp
game-framework/graphics/src/graphics/texture/: Texture2D.cpp
game-framework/graphics/src/input/: Input.cpp
game-framework/graphics/src/maths/: Noise.cpp
game-framework/graphics/src/objects/: Model3D.cpp
game-framework/graphics/src/utils/: FileManager.cpp  OBJLoader.cpp  TextureLoader.cpp
game-framework/graphics/test/: CMakeLists.txt
game-framework/graphics/test/src/: test_factorial.cpp
game-framework/physics/: CMakeLists.txt
game-framework/physics/include/: CoordTransform3D.h  Mass.h  Spring.hpp
game-framework/physics/src/: CoordTransform3D.cpp  RigidBodyGroupMember.cpp  RigidBodyStateSnapshot.cpp
game-framework/physics/test/: CMakeLists.txt
game-framework/physics/test/src/: test_some_physics.cpp
src/Graphics/: Makefile
src/Graphics/include/: Application.h  Camera.h  FileManager.h  Mesh.h  Resource.hpp  SkyBox.h  TextureCube.h  TextureLoader.h  VertexArray.h
src/Graphics/src/Camera/: CameraSetup.cpp
src/Physics/: Makefile
src/Physics/include/: RigidBodyStateSnapshot.h  State.h
src/Physics/src/: RigidBodyGroup.cpp
src/graphics/: CMakeLists.txt  test_static_lib.cpp
src/graphics/include/: Camera.h  CameraSetup.h  IndexBuffer.h  Input.h  Mesh.h  Noise.h  OBJLoader.h  OrthographicCamera.h  RenderCommand.hpp  RenderQueue.h  ResourceSet.h  Texture.h  ThreadPool.hpp  Timer.h  VertexBuffer.h  VertexFormat.h
src/graphics/src/camera/: Camera.cpp
src/graphics/src/core/: Application.cpp  Window.cpp
src/graphics/src/graphics/: Shader.cpp  SkyBox.cpp
src/graphics/src/graphics/primitives/: VertexFomat.cpp
src/graphics/src/graphics/renderer/: RenderQueue.cpp
src/graphics/src/graphics/texture/: Texture2D.cpp
src/graphics/src/utils/: Logger.cpp  Timer.cpp
src/physics/: CMakeLists.txt
src/physics/include/: InertiaTensor.h  RigidBody.h  RigidBodyGroup.h  RigidBodyStateSnapshot.h  State.h
src/physics/src/: InertiaTensor.cpp  Mass.cpp  RigidBody.cpp  RigidBodyGroup.cpp  RigidBodyGroupMember.cpp  State.cpp
(+9 files in other folders)
